--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,19 @@
-body  {
-    background-color: #FA8BFF;
-    background-image: linear-gradient(45deg, #FA8BFF 0%, #2BD2FF 52%, #2BFF88 90%);
-    background-repeat: norepeat;
-    font-family:Arial, Helvetica, sans-serif
-    min-height: 100vh;
+body{
+    margin: 30px;
+}
+.cabecera img{
+    display: block;
+    padding: 10px;
+}
+.ingredientes{
     display: flex;
-    justify-content: center;
-    align-self: start;
+    justify-content: space-between;
+}
+    .ingredientes ol:nth-child(2){
+        margin-right: 100px;
+    }
+        .ingredientes ol{
+            list-style: none;
+        }
 
-}
-div {
-    width: 50%;
-    border: solid 2px white;
-    text-align:center;
-    padding: 50px 25px;
- }
-image {
-    width: 25%;
-    border-radius: 50%;
-    border-radius: 5px;
-    background-color:white;
-    
-
-}
-h2 {
-    color: #FA8BFF ;
-}
-p {
-    font-weight: bold;
-a {
-     text-decoration: none;
-    text-transform: uppercase;
-    color:white;
-}
+   
